Bug 405991 - Kolour pain window won't activate after canvas resize
Summary: Kolour pain window won't activate after canvas resize
Status: RESOLVED FIXED
Alias: None
Product: kolourpaint
Classification: Applications
Component: general (other bugs)
Version First Reported In: 18.04
Platform: Kubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: kolourpaint-support
URL:
Keywords:
: 409377 (view as bug list)
Depends on:
Blocks:
 
Reported: 2019-03-29 14:31 UTC by leftcrane
Modified: 2020-11-22 21:23 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 20.12
Sentry Crash Report:


Attachments
video of problem (428.84 KB, video/mp4)
2019-03-29 14:31 UTC, leftcrane
Details

Note You need to log in before you can comment on or make changes to this bug.
Description leftcrane 2019-03-29 14:31:41 UTC
Created attachment 119116 [details]
video of problem

Version 18.04.3

Operating System: Kubuntu 18.10
KDE Plasma Version: 5.15.3
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.1
Kernel Version: 4.18.0-17-generic
OS Type: 64-bit

Open up the program and resize the canvas. The main window will become inactive and stay inactive. The only way to re-activate it is to alt-tab twice.

i haven't tested this outside a Latte + Global Menu environment. So I can't be certain that you can reproduce this on stock KDE.
Comment 1 Christoph Feck 2019-04-19 09:36:57 UTC
Odd, but I see the same without Latte or Global menu.
Comment 2 nttkde 2019-06-09 23:41:13 UTC
I can confirm this on KDE Neon User edition/Kolourpaint flatpak.
It also prevents refocusing and minimizing the app by clicking it on the KDE task bar, until Alt-Tabbing/bringing some other app to foreground.
If the colour selection area is floated/detached when resizing canvas, it disappears.
Comment 3 Mikael 2019-07-01 16:13:03 UTC
*** Bug 409377 has been marked as a duplicate of this bug. ***
Comment 4 Bug Janitor Service 2020-11-22 16:09:35 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/kolourpaint/-/merge_requests/4
Comment 5 Martin Koller 2020-11-22 21:21:03 UTC
Git commit 35c55d4a65e3bf680254dcf417b571cd1ec44353 by Martin Koller.
Committed on 22/11/2020 at 21:16.
Pushed by mkoller into branch 'master'.

Don't grab/release keyboard to get key events. Use setFocus() instead
FIXED-IN: 20.12

M  +1    -4    kpViewScrollableContainer.cpp

https://invent.kde.org/graphics/kolourpaint/commit/35c55d4a65e3bf680254dcf417b571cd1ec44353
Comment 6 Martin Koller 2020-11-22 21:23:25 UTC
Git commit 676899ef3b5749b7acb7b8b278059e99eca09c8b by Martin Koller.
Committed on 22/11/2020 at 21:22.
Pushed by mkoller into branch 'release/20.12'.

Don't grab/release keyboard to get key events. Use setFocus() instead
FIXED-IN: 20.12
(cherry picked from commit 35c55d4a65e3bf680254dcf417b571cd1ec44353)

M  +1    -4    kpViewScrollableContainer.cpp

https://invent.kde.org/graphics/kolourpaint/commit/676899ef3b5749b7acb7b8b278059e99eca09c8b