Don't grab/release keyboard to get key events. Use setFocus() instead

BUG: 405991
FIXED-IN: 20.12